--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <div class="header">
-            <h1> Hey! </h1>
+            <h1> Hey! click to self destruct! </h1>
             <h1>click yes or no </h1>
 
             <div class="buttons"> 
