--- a/yes.html
+++ b/yes.html
@@ -9,7 +9,7 @@
 
     <div class="letter">
     <div class="header">
-        <h1> Just kidding here is a heartfelt letter instead <3</h1>
+        <h1> Here is a heartfelt letter instead baby love u <3</h1>
     </div> 
 
     <div class="bodyletter">
